--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,11 @@
 	"require": {
 		"laravel/framework": "4.2.*",
 		"fzaninotto/faker": "^1.5",
-		"twbs/bootstrap": "^3.3"
+		"twbs/bootstrap": "^3.3",
+		"barryvdh/laravel-debugbar": "~1.8"
+	},
+	"require-dev": {
+	    "way/generators": "~2.0"
 	},
 	"autoload": {
 		"classmap": [
